# OnWayStudyAPI

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml
apps/activity/: models.py  serializers.py
apps/activity/migrations/: 0001_initial.py  0002_activity_created_at_activity_updated_at.py
apps/course/: models.py  serializers.py
apps/course/migrations/: 0001_initial.py  0002_alter_course_options_alter_course_table.py  0003_course_created_at_course_updated_at.py
apps/discipline/: apps.py  models.py  serializers.py
apps/discipline/migrations/: 0001_initial.py  0002_discipline_created_at_discipline_updated_at.py
apps/institution/: models.py  serializers.py  urls.py  views.py
apps/institution/migrations/: 0001_initial.py  0002_alter_institution_options_alter_institution_table.py  0003_institution_created_at_institution_updated_at.py  0004_alter_institution_table.py  0005_alter_institution_date.py  0006_alter_institution_date.py  0007_remove_institution_date.py  0008_institution_unique_institution_user_name.py
apps/user/: models.py  serializers.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py  0003_user_created_at_user_updated_at.py  0004_rename_senha_user_password.py
environment/: __init__.py
on_way_study/: asgi.py  settings.py  urls.py  wsgi.py
security/: authentication.py  middleware.py  permissions.py
