[project]
name = "onwaystudyapi"
version = "0.1.0"
description = "on way study api project"
authors = [
    {name = "LeandroDolensi",email = "leandro.dolensi@aluno.ifsp.edu.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
